fix: block gap

--- a/src/components/app/Container/Main/index.css
+++ b/src/components/app/Container/Main/index.css
@@ -5,6 +5,7 @@
   border-radius: 8px;
   min-height: calc(100vh - 100px);
   background-color: #fff;
+  margin: 0 8px;
   box-shadow: 0px 1px 4px -1px rgba(0, 0, 0, 0.2);
   overflow: hidden;
 }
